fixing header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ header  {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 6rem;
+  height: 10vh;
   margin: 0 auto;
   z-index: 10;
   background-color: white;
@@ -86,6 +86,8 @@ ul  {
   text-decoration: none;
   list-style-type: none;
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 header nav ul li {
@@ -108,6 +110,7 @@ header nav ul li {
     align-items: flex-start;
     width: auto;
     font-size: 1rem;
+    margin: 1rem auto;
   }
 }
 
